fix: correct wrong size of $desktop-max-content-width

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,7 +8,7 @@ $tablet-min-width: 660px;
 $tablet-max-content-width: $tablet-min-width - 2 * 20px;
 
 $desktop-min-width: 960px;
-$desktop-max-content-width: $desktop-min-width * 2 - 20px;
+$desktop-max-content-width: 960px;
 $desktop-max-width: 1400px;
 
 $high-density-dpi: 144dpi;
